@@ -1,3 +1,7 @@
+1998-09-18  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* gnome-support.m4: Remove commented out code.
+
 1998-09-12  Martin Baulig  <martin@home-of-linux.org>
 
 	* gnome-libgtop-sysdeps.m4: Added (AC_SUBST): `libgtop_have_sysinfo'.
